--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,24 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+    subprojects {
+          project.configurations.all {
+              afterEvaluate {project ->
+                if (project.hasProperty("android")) {
+                    android {
+                        compileSdkVersion 26
+                        buildToolsVersion '26.0.2'
+                    }
+                }
+            }
+             resolutionStrategy.eachDependency { details ->
+                if (details.requested.group == 'com.android.support'
+                      && !details.requested.name.contains('multidex') ) {
+                   details.useVersion "26.0.2"
+                }
+             }
+          }
+        }
 }
 
 allprojects {
