--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "native-base": "^2.11.0",
     "qs": "^6.5.2",
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-cookies": "^3.3.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-linear-gradient": "^2.5.3",
     "react-native-paper": "^2.1.2",
     "react-native-phone-call": "^1.0.9",
     "react-native-sound": "^0.10.9",
