--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "css-to-react-native": "^2.3.1",
     "firebase": "^6.0.2",
     "i18n-js": "^3.2.1",
     "lodash": "^4.17.11",
@@ -36,13 +37,17 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
+    "babel-plugin-react-native-classname-to-style": "^1.2.2",
+    "babel-plugin-react-native-platform-specific-extensions": "^1.1.1",
     "eslint": "^5.9.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.0",
+    "node-sass": "^4.12.0",
     "prop-types": "^15.6.2",
+    "react-native-sass-transformer": "^1.4.0",
     "react-test-renderer": "16.5.0"
   },
   "jest": {
